--- a/OnlineQuizzes/Views/Account/Register.cshtml
+++ b/OnlineQuizzes/Views/Account/Register.cshtml
@@ -18,6 +18,16 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.Role, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            <select class="form-control" id="Role" name="Role">
+                <option>Select Role</option>
+                <option>Student</option>
+                <option>Trainer</option>
+            </select>
+        </div>
+    </div>
+    <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
