Create Quiz By Trainer

--- a/OnlineQuizzes/Views/Trainers/Index.cshtml
+++ b/OnlineQuizzes/Views/Trainers/Index.cshtml
@@ -4,5 +4,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Hello I am a Trainer</h2>
+<hr />
+@Html.ActionLink("Add A New Quiz", "CreateQuizPage", "Trainers", null, new {@class="btn btn-primary"})
 
