--- a/OnlineQuizzes/Views/Trainers/AddMCQAnswers.cshtml
+++ b/OnlineQuizzes/Views/Trainers/AddMCQAnswers.cshtml
@@ -16,7 +16,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="form-group">
-     @Html.LabelFor(model => model.MCQAnswers.QuestionID, htmlAttributes: new { @class = "control-label col-md-2" })
+     @Html.LabelFor(model => model.MCQAnswers.QuestionID, htmlAttributes: new { @class = "control-label col-md-2" , @style = "display:none" })
         <div class="col-md-10">
         @Html.EditorFor(model => model.MCQAnswers.QuestionID, new
         { htmlAttributes = new { @class = "form-control", @Value = Model.questionID, @style = "display:none" } })
