--- a/OnlineQuizzes/Views/Trainers/AddQuestionFormPage.cshtml
+++ b/OnlineQuizzes/Views/Trainers/AddQuestionFormPage.cshtml
@@ -16,11 +16,11 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(model => model.question.QuizId, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.question.QuizId, htmlAttributes: new { @class = "control-label col-md-2" , @style = "display:none" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.question.QuizId, new
-            { htmlAttributes = new { @class = "form-control", @Value = Model.quizID, @readonly = "readonly" } })
-            @Html.ValidationMessageFor(model => model.question.QuizId, "", new { @class = "text-danger" })
+       { htmlAttributes = new { @class = "form-control", @Value = Model.quizID, @style = "display:none" } })
+            @Html.ValidationMessageFor(model => model.question.QuizId, "", new { @class = "text-danger"})
         </div>
     </div>
 
