Create Categories Table And Seeding It, Then Add the Values added To Drop Down List When Trainer Create A New Quiz

--- a/OnlineQuizzes/Views/Trainers/ListOfMyQuizzes.cshtml
+++ b/OnlineQuizzes/Views/Trainers/ListOfMyQuizzes.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayFor(modelItem => item.QuizName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Category)
+            @Html.DisplayFor(modelItem => item.Category.CategoryName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.DurationOfQuiz)
