--- a/OnlineQuizzes/Views/Trainers/CreateQuiz.cshtml
+++ b/OnlineQuizzes/Views/Trainers/CreateQuiz.cshtml
@@ -1,4 +1,4 @@
-﻿@model OnlineQuizzes.Models.Quiz
+﻿@model OnlineQuizzes.ViewModels.NewQuizViewModel
 
 @{
     ViewBag.Title = "CreateQuiz";
@@ -7,52 +7,52 @@
 
 <h2>CreateQuiz</h2>
 
-@using (Html.BeginForm("CreateNewQuiz", "Trainers")) 
+@using (Html.BeginForm("CreateNewQuiz", "Trainers"))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Quiz</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.TrainerName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.quiz.TrainerName, htmlAttributes: new { @class = "control-label col-md-2", @style = "display:none" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TrainerName, new { htmlAttributes = new { @class = "form-control", @Value = User.Identity.Name,
-                @readonly = "readonly" } })
-                @Html.ValidationMessageFor(model => model.TrainerName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.quiz.TrainerName, new { htmlAttributes = new { @class = "form-control", @Value = User.Identity.Name, @readonly = true , @style = "display:none"} })
+                @Html.ValidationMessageFor(model => model.quiz.TrainerName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.QuizName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.quiz.QuizName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.QuizName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.QuizName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.quiz.QuizName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.quiz.QuizName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.quiz.CategoryID , htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Category, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.quiz.CategoryID, new SelectList(Model.categories, "CategoryID", "CategoryName"),
+                "Choose The Type Of Question", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.quiz.CategoryID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DurationOfQuiz, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.quiz.DurationOfQuiz, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DurationOfQuiz, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DurationOfQuiz, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.quiz.DurationOfQuiz, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.quiz.DurationOfQuiz, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TimeOfQuiz, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.quiz.TimeOfQuiz, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TimeOfQuiz, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TimeOfQuiz, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.quiz.TimeOfQuiz, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.quiz.TimeOfQuiz, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -65,5 +65,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </div>
