--- a/OnlineQuizzes/Views/Trainers/CreateQuiz.cshtml
+++ b/OnlineQuizzes/Views/Trainers/CreateQuiz.cshtml
@@ -18,7 +18,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.quiz.TrainerName, htmlAttributes: new { @class = "control-label col-md-2", @style = "display:none" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.quiz.TrainerName, new { htmlAttributes = new { @class = "form-control", @Value = User.Identity.Name, @readonly = true , @style = "display:none"} })
+                @Html.EditorFor(model => model.quiz.TrainerName, new { htmlAttributes = new { @class = "form-control", @Value = User.Identity.Name, @readonly = true, @style = "display:none" } })
                 @Html.ValidationMessageFor(model => model.quiz.TrainerName, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -32,10 +32,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.quiz.CategoryID , htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.quiz.CategoryID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.quiz.CategoryID, new SelectList(Model.categories, "CategoryID", "CategoryName"),
-                "Choose The Type Of Question", new { @class = "form-control" })
+                "Choose The Type Of Question", new { @class = "chzn-select" })
                 @Html.ValidationMessageFor(model => model.quiz.CategoryID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -67,3 +67,9 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section scripts{
+    <script type="text/javascript">
+        $(".chzn-select").chosen();
+    </script>
+    }
