--- a/OnlineQuizzes/Views/Trainers/ListOfMyQuizzes.cshtml
+++ b/OnlineQuizzes/Views/Trainers/ListOfMyQuizzes.cshtml
@@ -60,7 +60,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.QuizID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.QuizID }) |
+                @Html.ActionLink("Details", "QuizDetails", new { id = item.QuizID }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.QuizID })
             </td>
         </tr>
