Create Questions Details Page To Show The Answers Of The Questions, and If Answers are null, Trainer Can Add Answers

--- a/OnlineQuizzes/Views/Trainers/QuizDetails.cshtml
+++ b/OnlineQuizzes/Views/Trainers/QuizDetails.cshtml
@@ -38,7 +38,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.QuestionID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.QuestionID }) |
+                @Html.ActionLink("Details", "QuestionDetails", new { id = item.QuestionID, QuizID = Model.quizID }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.QuestionID })
             </td>
         </tr>
