Trainer can delete Own Quizzes With Their Related Questions and Answers

--- a/OnlineQuizzes/Views/Trainers/ListOfMyQuizzes.cshtml
+++ b/OnlineQuizzes/Views/Trainers/ListOfMyQuizzes.cshtml
@@ -61,7 +61,7 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.QuizID }) |
                 @Html.ActionLink("Details", "QuizDetails", new { id = item.QuizID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.QuizID })
+                @Html.ActionLink("Delete", "DeleteQuiz", new { id = item.QuizID })
             </td>
         </tr>
     </tbody>
