Add Alert Message (Notification) After each action and Some Modifications.

--- a/OnlineQuizzes/Views/Trainers/ListOfMyQuizzes.cshtml
+++ b/OnlineQuizzes/Views/Trainers/ListOfMyQuizzes.cshtml
@@ -14,10 +14,9 @@
         });
     </script>
 }
-
-<h2>ListOfMyQuizzes</h2>
-
-
+<br/>
+<div class="container body-content">
+    @Html.Partial("_Notifications")</div>
 <p>
     @Html.ActionLink("Add A New Quiz", "CreateQuizPage", "Trainers", null, new { @class = "btn btn-primary" })
 </p>
