--- a/OnlineQuizzes/Views/Trainers/AddQuestions.cshtml
+++ b/OnlineQuizzes/Views/Trainers/AddQuestions.cshtml
@@ -5,11 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-<h2>AddQuestions</h2>
+<br />
+<div class="container body-content">
+    @Html.Partial("_Notifications")
+</div>
+<p>
 
 <p>
-    @Html.ActionLink("Add a New Question", "AddQuestionPage", "Trainers", new { QuizID = Model.quizID }, null)
+    @Html.ActionLink("Add a New Question", "AddQuestionPage", "Trainers", new { QuizID = Model.quizID }, new { @class = "btn btn-primary" })
 </p>
 <table class="table">
     <tr>
@@ -22,28 +25,24 @@
         <th>
             @Html.DisplayNameFor(model => model.question.GradeOfQuestion)
         </th>
-        <th></th>
     </tr>
 
     @foreach (var item in Model.questions)
     {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.QuestionText)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.QuestionType.Type)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.GradeOfQuestion)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.QuestionID }) |
-        @Html.ActionLink("Details", "Details", new { id = item.QuestionID }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.QuestionID })
-    </td>
-</tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.QuestionText)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.QuestionType.Type)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.GradeOfQuestion)
+            </td>
+        </tr>
     }
 </table>
+
+
 
 
