--- a/OnlineQuizzes/Views/Trainers/CreateQuiz.cshtml
+++ b/OnlineQuizzes/Views/Trainers/CreateQuiz.cshtml
@@ -5,14 +5,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>CreateQuiz</h2>
+<h2>Create A new Quiz</h2>
 
 @using (Html.BeginForm("CreateNewQuiz", "Trainers"))
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Quiz</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -65,7 +64,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "ListOfMyQuizzes")
 </div>
 
 @section scripts{
