Trainer Can Edit Questions and MCQ Answers

--- a/OnlineQuizzes/Views/Trainers/AddQuestionToListFormPage.cshtml
+++ b/OnlineQuizzes/Views/Trainers/AddQuestionToListFormPage.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>AddQuestionToListFormPage</h2>
+<h2>Add Question</h2>
 
 @using (Html.BeginForm("ShowAnswerPageForList", "Trainers", new { QuizID = Model.quizID }))
 {
