--- a/OnlineQuizzes/Views/Trainers/EditQuiz.cshtml
+++ b/OnlineQuizzes/Views/Trainers/EditQuiz.cshtml
@@ -1,7 +1,7 @@
 ﻿@model OnlineQuizzes.Models.Quiz
 
 @{
-    ViewBag.Title = "Edit A Quiz";
+    ViewBag.Title = "Edit Quiz";
 }
 
 <h2>Edit Quiz</h2>
