--- a/OnlineQuizzes/Views/Trainers/AddMCQAnswersToList.cshtml
+++ b/OnlineQuizzes/Views/Trainers/AddMCQAnswersToList.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>AddMCQAnswersToList</h2>
+<h2>Add Answers</h2>
 
 @using (Html.BeginForm("AddMCQQuestionToList", "Trainers", new { QuizID = Model.quizID }))
 {
