--- a/OnlineQuizzes/Views/Trainers/QuizDetails.cshtml
+++ b/OnlineQuizzes/Views/Trainers/QuizDetails.cshtml
@@ -39,7 +39,7 @@
                 @Html.DisplayFor(modelItem => item.GradeOfQuestion)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.QuestionID }) |
+                @Html.ActionLink("Edit", "EditQuestion", new { id = item.QuestionID, QuizID = Model.quizID }) |
                 @Html.ActionLink("Details", "QuestionDetails", new { id = item.QuestionID, QuizID = Model.quizID }) |
                 @Html.ActionLink("Delete", "DeleteQuestion", new { id = item.QuestionID , QuizID = Model.quizID })
             </td>
