--- a/OnlineQuizzes/Views/Trainers/ListOfMyQuizzes.cshtml
+++ b/OnlineQuizzes/Views/Trainers/ListOfMyQuizzes.cshtml
@@ -58,9 +58,9 @@
                 @Html.DisplayFor(modelItem => item.TimeOfQuiz)
             </td>
             <td>
-                @Html.ActionLink("Edit", "EditQuiz", new { id = item.QuizID }) |
-                @Html.ActionLink("Details", "QuizDetails", new { id = item.QuizID }) |
-                @Html.ActionLink("Delete", "DeleteQuiz", new { id = item.QuizID })
+                @Html.ActionLink("Edit", "EditQuiz", new { id = item.QuizID }, new { @class= "btn btn-default"}) 
+                @Html.ActionLink("Details", "QuizDetails", new { id = item.QuizID }, new { @class = "btn btn-info" }) 
+                @Html.ActionLink("Delete", "DeleteQuiz", new { id = item.QuizID }, new { @class = "btn btn-danger" })
             </td>
         </tr>
     </tbody>
