--- a/OnlineQuizzes/Views/Questions/AddQuestions.cshtml
+++ b/OnlineQuizzes/Views/Questions/AddQuestions.cshtml
@@ -12,7 +12,7 @@
 <p>
 
 <p>
-    @Html.ActionLink("Add a New Question", "AddQuestionPage", "Trainers", new { QuizID = Model.quizID }, new { @class = "btn btn-primary" })
+    @Html.ActionLink("Add a New Question", "AddQuestionPage", "Questions", new { QuizID = Model.quizID }, new { @class = "btn btn-primary" })
 </p>
 <table class="table">
     <tr>
