--- a/OnlineQuizzes/Views/Trainers/EditQuestion.cshtml
+++ b/OnlineQuizzes/Views/Trainers/EditQuestion.cshtml
@@ -62,5 +62,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "")
+    @Html.ActionLink("Back to List", "QuizDetails", "Quizs", new { id = Model.quizID }, null)
 </div>
