--- a/OnlineQuizzes/Views/MCQAnswers/AddMCQAnswersToList.cshtml
+++ b/OnlineQuizzes/Views/MCQAnswers/AddMCQAnswersToList.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Add Answers</h2>
 
-@using (Html.BeginForm("AddMCQQuestionToList", "Trainers", new { QuizID = Model.quizID }))
+@using (Html.BeginForm("AddMCQQuestionToList", "MCQAnswers", new { QuizID = Model.quizID }))
 {
     @Html.AntiForgeryToken()
 
