--- a/OnlineQuizzes/Views/Trainers/EditAnswer.cshtml
+++ b/OnlineQuizzes/Views/Trainers/EditAnswer.cshtml
@@ -72,4 +72,7 @@
 </div>
 }
 
+<div>
+    @Html.ActionLink("Back To Answers", "QuestionDetails", "Questions", new { id = Model.questionID, QuizID = Model.quizID }, null)
+</div>
 
