--- a/OnlineQuizzes/Views/Quizs/CreateQuiz.cshtml
+++ b/OnlineQuizzes/Views/Quizs/CreateQuiz.cshtml
@@ -50,7 +50,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.quiz.TimeOfQuiz, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.quiz.TimeOfQuiz, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.quiz.TimeOfQuiz, new { htmlAttributes = new { @type = "datetime-local", @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.quiz.TimeOfQuiz, "", new { @class = "text-danger" })
             </div>
         </div>
