--- a/OnlineQuizzes/Views/Quizs/CreateQuiz.cshtml
+++ b/OnlineQuizzes/Views/Quizs/CreateQuiz.cshtml
@@ -11,56 +11,65 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.quiz.TrainerName, htmlAttributes: new { @class = "control-label col-md-2", @style = "display:none" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.quiz.TrainerName, new { htmlAttributes = new { @class = "form-control", @Value = User.Identity.Name, @readonly = true, @style = "display:none" } })
-                @Html.ValidationMessageFor(model => model.quiz.TrainerName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.quiz.QuizName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.quiz.QuizName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.quiz.QuizName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.quiz.CategoryID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.quiz.CategoryID, new SelectList(Model.trainerMajors, "CategoryID", "CategoryName"),
-                "Choose The Type Of Question", new { @class = "chzn-select" })
-                @Html.ValidationMessageFor(model => model.quiz.CategoryID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.quiz.DurationOfQuiz, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.quiz.DurationOfQuiz, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.quiz.DurationOfQuiz, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.quiz.TimeOfQuiz, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.quiz.TimeOfQuiz, new { htmlAttributes = new { @type = "datetime-local", @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.quiz.TimeOfQuiz, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+<div class="form-horizontal">
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.quiz.TrainerName, htmlAttributes: new { @class = "control-label col-md-2", @style = "display:none" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.quiz.TrainerName, new { htmlAttributes = new { @class = "form-control", @Value = User.Identity.Name, @readonly = true, @style = "display:none" } })
+            @Html.ValidationMessageFor(model => model.quiz.TrainerName, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.quiz.QuizName, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.quiz.QuizName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.quiz.QuizName, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.quiz.CategoryID, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.quiz.CategoryID, new SelectList(Model.trainerMajors, "CategoryID", "CategoryName"),
+            "Choose Quiz Major", new { @class = "chzn-select" })
+            @Html.ValidationMessageFor(model => model.quiz.CategoryID, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.StudentIDs, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.StudentIDs, new SelectList(Model.studentInterests, "Id", "Student.StudentName"),
+            "Choose Students Of Quiz", new { @class = "chzn-select" })
+            @Html.ValidationMessageFor(model => model.StudentIDs, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.quiz.DurationOfQuiz, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.quiz.DurationOfQuiz, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.quiz.DurationOfQuiz, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.quiz.TimeOfQuiz, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.quiz.TimeOfQuiz, new { htmlAttributes = new { @type = "datetime-local", @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.quiz.TimeOfQuiz, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-default" />
+        </div>
+    </div>
+</div>
 }
 
 <div>
