--- a/OnlineQuizzes/Views/Shared/DisplayStudents.cshtml
+++ b/OnlineQuizzes/Views/Shared/DisplayStudents.cshtml
@@ -2,10 +2,18 @@
 
 <option value="">--Select Students--</option>
 
-@if(ViewBag.InterestStudents != null)
+@if (ViewBag.InterestStudents != null)
 {
-    foreach(var item in ViewBag.InterestStudents)
+    foreach (var item in ViewBag.InterestStudents)
     {
-     <option value="@item.Value">@item.Text</option>
-     }
+        <option value="@item.Value">@item.Text</option>
+    }
+}
+
+
+
+@section scripts{
+    <script type="text/javascript">
+        $(".chzn-select").chosen();
+    </script>
 }
